--- a/style.css
+++ b/style.css
@@ -1,22 +1,46 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .topsection {
     font-family: 'Roboto', 'Arial', sans-serif;
     background-color: #1F2937;
+}
+
+.header {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 50px;
+    flex-shrink: 0;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
+    margin-right: 110px;
 }
 
 .header-img {
-    max-width: 400px;
+    max-width: 450px;
+    border-radius: 10px;
+}
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    padding-bottom: 100px;
 }
 
 .hero h1 {
   font-size: 48px;
   font-weight: extra-bold;
   color: #F9FAF8;
+  margin-bottom: -10px;
 }
 
 .hero p {
@@ -32,6 +56,12 @@ a {
 
 ul {
     list-style-type: none;
+    display: flex;
+    gap: 20px;
+}
+
+.herotext {
+    max-width: 450px;
 }
 
 button {
