--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+* {
+  font-family: 'Roboto', 'Arial', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
 }
 
 .topsection {
-    font-family: 'Roboto', 'Arial', sans-serif;
     background-color: #1F2937;
 }
 
@@ -38,7 +41,7 @@ body {
 
 .hero h1 {
   font-size: 48px;
-  font-weight: extra-bold;
+  font-weight: 800;
   color: #F9FAF8;
   margin-bottom: -10px;
 }
@@ -67,10 +70,35 @@ ul {
 button {
     background-color: #3882F6;
     color: #F9FAF8;
-    font-family: 'Roboto', 'Arial', sans-serif;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 22px;
     border-radius: 10px;
     border: none;
+}
+
+.squareimage {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+}
+
+.info-heading {
+    font-size: 36px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.info-section {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 75px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    max-width: 150px;
 }
