--- a/style.css
+++ b/style.css
@@ -102,3 +102,27 @@ button {
     flex-direction: column;
     max-width: 150px;
 }
+
+.quote-section {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px 0px;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1F2937;
+    max-width: 800px;
+}
+
+.author {
+    color: #1F2937;
+    font-weight: bold;
+    align-self: center;
+    margin-left: 600px;
+    margin-top: -30px;
+}
