--- a/style.css
+++ b/style.css
@@ -123,6 +123,29 @@ button {
     color: #1F2937;
     font-weight: bold;
     align-self: center;
+    font-size: 24px;
     margin-left: 600px;
     margin-top: -30px;
+}
+
+.sign-up {
+    background-color: #3882F6;
+    color: white;
+    margin: 100px 200px;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 100px;
+    border-radius: 10px;
+    align-items: center;
+}
+
+h3 {
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: -10px;
+}
+
+.sign-up button {
+    border: 3px solid white;
+    max-height: 45px;
 }
