--- a/style.css
+++ b/style.css
@@ -149,3 +149,14 @@ h3 {
     border: 3px solid white;
     max-height: 45px;
 }
+
+footer {
+    background-color: #1F2937;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    display: flex;
+    font-weight: 200;
+    font-size: 16px;
+}
